# tmplang

tmplang/: .clang-tidy  .gitignore  CMakeLists.txt
tmplang/cmake/caches/: Common.cmake  Debug.cmake
tmplang/include/: CMakeLists.txt
tmplang/include/tmplang/: CMakeLists.txt  Version.inc.in
tmplang/include/tmplang/ADT/: LLVM.h  PrintUtils.h
tmplang/include/tmplang/AST/: ASTContext.h  CompilationUnit.h  Decl.h  Decls.h  Node.h  RecursiveASTVisitor.h  RecursiveTypeVisitor.h  Type.h  Types.h
tmplang/include/tmplang/CLI/: Arguments.h  CLPrinter.h  CMakeLists.txt  Options.td
tmplang/include/tmplang/Codegen/: Codegen.h
tmplang/include/tmplang/Diagnostics/: Diagnostic.h  DiagnosticMessages.def  Hint.h
tmplang/include/tmplang/Lexer/: Lexer.h  SourceLocation.h  Token.h
tmplang/include/tmplang/Lowering/: HIRBuilder.h  InitTmplang.h  Lowering.h
tmplang/include/tmplang/Lowering/Conversion/: CMakeLists.txt  Passes.h  Passes.td
tmplang/include/tmplang/Lowering/Sema/: Sema.h
tmplang/include/tmplang/Lowering/Transforms/: CMakeLists.txt  Passes.h  Passes.td
tmplang/include/tmplang/Parser/: Parser.h
tmplang/include/tmplang/Sema/: Sema.h
tmplang/include/tmplang/Support/: FileManager.h  SourceManager.h
tmplang/include/tmplang/Tree/: Nodes.def
tmplang/include/tmplang/Tree/HIR/: CompilationUnit.h  Decl.h  Decls.h  Expr.h  Exprs.h  HIRBuilder.h  HIRContext.h  MultipleNodeVisitor.h  Namespace.h  Node.h  (+5 more)
tmplang/lib/: CMakeLists.txt
tmplang/lib/AST/: ASTContext.cpp  ASTTextPrinter.cpp  CMakeLists.txt  CompilationUnit.cpp  Types.cpp
tmplang/lib/CLI/: Arguments.cpp  CLPrinter.cpp  CMakeLists.txt
tmplang/lib/Codegen/: CMakeLists.txt  Codegen.cpp
tmplang/lib/Diagnostics/: CMakeLists.txt  Diagnostic.cpp  DiagnosticPrettyPrinter.cpp  DiagnosticPrettyPrinter.h  Hint.cpp
tmplang/lib/Lexer/: CMakeLists.txt  Lexer.cpp  Token.cpp
tmplang/lib/Lowering/: CMakeLists.txt  HIRBuilder.cpp  Lowering.cpp
tmplang/lib/Lowering/Conversion/: CMakeLists.txt  PassDetail.h
tmplang/lib/Lowering/Sema/: CMakeLists.txt  Sema.cpp  SymbolRedefinitionValidation.cpp  SymbolRedefinitionValidation.h  SymbolTypeResolver.cpp  SymbolTypeResolver.h  SymbolUsersAndDerivedResolver.cpp  SymbolUsersAndDerivedResolver.h
tmplang/lib/Lowering/Transforms/: CMakeLists.txt  RemoveOpsAfterReturn.cpp
tmplang/lib/Parser/: CMakeLists.txt  Parser.cpp
tmplang/lib/Sema/: CMakeLists.txt  Sema.cpp
tmplang/lib/Support/: CMakeLists.txt  FileManager.cpp  SourceManager.cpp
tmplang/lib/Tree/: CMakeLists.txt  PrintUtils.h  TreeFormatPrinter.h
tmplang/lib/Tree/HIR/: CMakeLists.txt  CompilationUnit.cpp  Decls.cpp  Exprs.cpp  HIRBuilder.cpp  HIRContext.cpp  HIRNodeTextPrinter.cpp  Node.cpp  Symbol.cpp  Types.cpp
tmplang/lib/Tree/Source/: CMakeLists.txt  CompilationUnit.cpp  Decls.cpp  Exprs.cpp  SourceNodeTextPrinter.cpp
tmplang/tests/: CMakeLists.txt
tmplang/tests/lit/: lit.cfg.py  lit.site.cfg.py.in
tmplang/tests/lit/Codegen/: Simple_00.tl
tmplang/tests/lit/CommandLine/: help.tl  it_works.tl
tmplang/tests/lit/ParserErrorMsgs/: FoundUnexpectedToken.tl  MissingArrow-000.tl  MissingArrow-001.tl  MissingClosingRightParenthesisOfType.tl  MissingCommaPriorToNextTypeOnTuple-000.tl  MissingCommaPriorToNextTypeOnTuple-001.tl  MissingCommaPriorToNextTypeOnTuple-002.tl  MissingCommaPriorToNextTypeOnTuple-003.tl  MissingCommaPriorToNextTypeOnTupleExpr-000.tl  MissingCommaPriorToNextTypeOnTupleExpr-001.tl  MissingCommaPriorToNextTypeOnTupleExpr-002.tl  MissingCommaPriorToNextTypeOnTupleExpr-003.tl  MissingCommaPriorToNextTypeOnTupleExpr-004.tl  MissingCommaSeparatingParams.tl  MissingDataDeclId.tl  MissingDataDeclStartingEq.tl  MissingDataFieldColon.tl  MissingDataFieldId.tl  MissingExpectedType-00.tl  MissingExpectedType-01.tl  MissingExpressionAfterRet.tl  MissingFunctionType.tl  MissingLeftKeyBrace.tl  MissingOpeningLeftParenthesisOfType-00.tl  MissingOpeningLeftParenthesisOfType-01.tl  MissingOpeningLeftParenthesisOfType-02.tl  MissingOpeningLeftParenthesisOfType-03.tl  MissingOpeningLeftParenthesisOfType.tl  MissingParameterId.tl  MissingRightKeyBrace.tl  MissingSemicolon-00.tl  MissingSemicolon-01.tl  MissingSubprogramIdentifier-fn.tl  MissingSubprogramIdentifier-proc.tl
tmplang/tests/lit/ParsinErrorRecovery/: FullExampleOfRecovery.tl  MissingArrow-00.tl  MissingArrow-01.tl  MissingBothBrackets.tl  MissingCommaPriorToNextTypeOnTuple-000.tl  MissingCommaPriorToNextTypeOnTuple-001.tl  MissingCommaPriorToNextTypeOnTuple-002.tl  MissingCommaPriorToNextTypeOnTuple-003.tl  MissingCommaSeparatingParams.tl  MissingLeftBracket.tl  MissingParamIdOnSubprogram-00.tl  MissingParamIdOnSubprogram-01.tl  MissingRightBracket.tl  MissingSemicolon-00.tl  MissingSemicolon-01.tl  MissingSubprogramClassification-00.tl  MissingSubprogramClassification-01.tl  MissingSubprogramIdentifier-00.tl  MissingSubprogramIdentifier-01.tl  MissingSubprogramIdentifier-02.tl  MissingSubprogramIdentifier-03.tl
tmplang/tests/lit/Sema/: FunctionDoesNotReturnInAlPaths.tl  MatchDifferentTypesOnBranches.tl  MissingOtherwise.tl  MistmatchFunctionAndRetType-000.tl  MistmatchFunctionAndRetType-001.tl  OtherwiseNotLastCase.tl  ReturnUnit.tl  ReturnUnitTuple.tl  Returni32.tl
tmplang/tests/lit/Source/: ExprAggregateDataAccess-000.tl  ExprAggregateDataAccess-001.tl  ExprAggregateDataAccess-002.tl  ExprDataFieldAccess-000.tl  ExprDataFieldAccess-001.tl  ExprMatch-000.tl  ExprMatch-001.tl  ExprMatch-002.tl  ExprMatch-003.tl  ExprMatch-004.tl  ExprVarRef-000.tl  ExprVarRef-001.tl  ExprVarRef-002.tl  UnionDecl.tl
tmplang/tests/unittests/: CMakeLists.txt  README.md  lit.cfg.py  lit.site.cfg.py.in
tmplang/tests/unittests/HIR/: CMakeLists.txt  HIRTest.cpp
tmplang/tests/unittests/Lexer/: BasicLexer.cpp
tmplang/tests/unittests/Parser/: CMakeLists.txt  ParserTest.cpp
tmplang/tests/unittests/common/: Parser.h  Testing.h
tmplang/tests/unittests/lexer/: BasicLexer.cpp  CMakeLists.txt
tmplang/tests/unittests/meta/: CMakeLists.txt  Metatest.cpp
tmplang/tools/: CMakeLists.txt  tmplangc.cpp
tmplang/tools/tmplang-opt/: CMakeLists.txt  tmplang-opt.cpp
(+234 files in other folders)
